--- a/lwraft/server/Makefile.am
+++ b/lwraft/server/Makefile.am
@@ -22,6 +22,7 @@ SUBDIRS = \
     $(STOREDIRS) \
     indexcfg \
     ldap-head \
+    rest-head \
     middle-layer \
     replication \
     saslvmdirdb \
