oidc c client lib - enable TLS validation
Change-Id: I7ac528417fdcc1367db82eb75d3a812eb4b7cfb7

--- a/vmafd/config/vmafd.reg.in
+++ b/vmafd/config/vmafd.reg.in
@@ -75,4 +75,7 @@
     default = dword:0000000A
     doc     = "Set the heartbeat interval frequency"
 }
-
+"CAPath" = {
+    default = "/etc/ssl/certs"
+    doc     = "CA Certs Path"
+}
