oidc c client lib - publish ssocommon.h
Change-Id: I9c27aa66db59eb7bd9ca974c6ceb86a136c60e3b

--- a/vmidentity/ssoclients/common/include/public/Makefile.am
+++ b/vmidentity/ssoclients/common/include/public/Makefile.am
@@ -1,3 +1,4 @@
 ssoclientsincludedir=$(includedir)
 ssoclientsinclude_HEADERS=ssoerrors.h \
-                          ssotypes.h
+                          ssotypes.h \
+                          ssocommon.h
