Fix ubuntu/fedora build issue with REST (PR 1883848)
Change-Id: Ie98913985bb3aeafd615385af33c633fc1888ef5

--- a/vmca/configure.ac
+++ b/vmca/configure.ac
@@ -66,6 +66,25 @@ AC_ARG_ENABLE([python],
     ])
 AM_CONDITIONAL(ENABLE_PYTHON, [$ENABLE_PYTHON])
 
+# rest head flag
+
+REST_ENABLED=true
+AC_ARG_ENABLE([rest],
+    [AC_HELP_STRING([--enable-rest], [enable rest heads (default: enabled)])],
+    [
+        if test x"$enableval" = x"no"
+        then
+            REST_ENABLED=false
+        fi
+    ])
+
+if $REST_ENABLED
+then
+AC_DEFINE_UNQUOTED(REST_ENABLED, 1, [ Enable rest heads ])
+fi
+
+AM_CONDITIONAL(REST_ENABLED, [$REST_ENABLED])
+
 # Java component
 
 AC_ARG_WITH([java],
@@ -168,41 +187,6 @@ AC_SUBST(VMAFD_BASE_PATH)
 AC_SUBST(VMAFD_INCLUDES)
 AC_SUBST(VMAFD_LDFLAGS)
 
-# OIDC
-
-OIDC_DEFAULT_PATH=/opt/vmware/lib64
-SSOCOMMON_LDFLAGS=$OIDC_DEFAULT_PATH
-AC_ARG_WITH([ssocommon],
-    [AC_HELP_STRING([--with-ssocommon=<dir>], [use ssocommon binaries rooted at prefix <dir> ])],
-    [
-        SSOCOMMON_BASE_PATH="$withval"
-        SSOCOMMON_INCLUDES="-I$withval/include"
-        SSOCOMMON_LDFLAGS="-L$withval/lib64 -Wl,-rpath,/opt/vmware/lib64 -Wl,-rpath-link,/opt/vmware/lib64"
-    ])
-
-SSOCOMMON_LIBS="-lssocommon"
-AC_SUBST(SSOCOMMON_BASE_PATH)
-AC_SUBST(SSOCOMMON_INCLUDES)
-AC_SUBST(SSOCOMMON_LDFLAGS)
-
-OIDC_LDFLAGS=$OIDC_DEFAULT_PATH
-AC_ARG_WITH([oidc],
-    [AC_HELP_STRING([--with-oidc=<dir>], [use oidc binaries rooted at prefix <dir> ])],
-    [
-        OIDC_BASE_PATH="$withval"
-        OIDC_INCLUDES="-I$withval/include"
-        OIDC_LDFLAGS="-L$withval/lib64 -Wl,-rpath,/opt/vmware/lib64 -Wl,-rpath-link,/opt/vmware/lib64"
-    ])
-
-OIDC_LIBS="-lssooidc"
-AC_CHECK_HEADERS(oidc.h)
-AC_CHECK_HEADERS(oidc_types.h)
-AC_CHECK_HEADERS(common_types.h)
-AC_SUBST(OIDC_BASE_PATH)
-AC_SUBST(OIDC_INCLUDES)
-AC_SUBST(OIDC_LDFLAGS)
-
-
 # Jansson
 
 AC_ARG_WITH([jansson],
@@ -210,15 +194,13 @@ AC_ARG_WITH([jansson],
     [
         JANSSON_BASE_PATH="$withval"
         JANSSON_INCLUDES="-I$withval/include"
-        JANSSON_LDFLAGS="-L$withval/lib64 -Wl,-rpath,/opt/vmware/lib64 -Wl,-rpath-link,/opt/vmware/lib64"
+        JANSSON_LDFLAGS="-L$withval/lib"
     ])
 
-JANSSON_LIBS="-ljansson"
 AC_CHECK_HEADERS(jansson.h)
 AC_SUBST(JANSSON_BASE_PATH)
 AC_SUBST(JANSSON_INCLUDES)
 AC_SUBST(JANSSON_LDFLAGS)
-
 
 # C rest engine
 
@@ -230,12 +212,27 @@ AC_ARG_WITH([c-rest-engine],
         CRESTENGINE_LDFLAGS="-L$withval/lib"
     ])
 
-CRESTENGINE_LIBS="-lrestengine"
 AC_CHECK_HEADERS(vmrest.h)
 AC_SUBST(CRESTENGINE_BASE_PATH)
 AC_SUBST(CRESTENGINE_INCLUDES)
 AC_SUBST(CRESTENGINE_LDFLAGS)
 
+# OIDC
+
+AC_ARG_WITH([oidc],
+    [AC_HELP_STRING([--with-oidc=<dir>], [use oidc binaries rooted at prefix <dir> ])],
+    [
+        OIDC_BASE_PATH="$withval"
+        OIDC_INCLUDES="-I$withval/include"
+        OIDC_LDFLAGS="-L$withval/lib64 -Wl,-rpath,/opt/vmware/lib64 -Wl,-rpath-link,/opt/vmware/lib64"
+    ])
+
+AC_CHECK_HEADERS(oidc.h)
+AC_CHECK_HEADERS(oidc_types.h)
+AC_CHECK_HEADERS(common_types.h)
+AC_SUBST(OIDC_BASE_PATH)
+AC_SUBST(OIDC_INCLUDES)
+AC_SUBST(OIDC_LDFLAGS)
 
 # Likewise components
 
@@ -556,26 +553,41 @@ AC_CHECK_LIB(
      $LWREG_LIBS $LWMSG_LIBS $LWBASE_LIBS
     ])
 AC_CHECK_LIB(
-              [lber],
-              [ber_scanf],
-              [LBER_LIBS="-llber"],
-              [],
-              [$LW_LDFLAGS -llber])
-
-#AC_CHECK_LIB(
-#              [gssapi_krb5],
-#              [gss_accept_sec_context],
-#              [GSSAPI_LIBS="-lgssapi_krb5 -lkrb5 -lk5crypto -lkrb5support -lcom_err"],
-#              [],
-#              [$LW_LDFLAGS -lgssapi_krb5 -lkrb5 -lk5crypto -lkrb5support -lcom_err])
-
+    [lber],
+    [ber_scanf],
+    [LBER_LIBS="-llber"],
+    [],
+    [$LW_LDFLAGS -llber])
 AC_CHECK_LIB(
-              [ldap_r],
-              [ldap_add_ext],
-              [LDAP_LIBS="-lldap_r -llber -lsasl2"],
-              [],
-              [$LW_LDFLAGS -llber -lsasl2 $GSSAPI_LIBS $OPENSSL_LDFLAGS $CRYPTO_LIBS])
-
+    [ldap_r],
+    [ldap_add_ext],
+    [LDAP_LIBS="-lldap_r -llber -lsasl2"],
+    [],
+    [$LW_LDFLAGS -llber -lsasl2 $GSSAPI_LIBS $OPENSSL_LDFLAGS $CRYPTO_LIBS])
+AC_CHECK_LIB(
+    [jansson],
+    [json_object],
+    [JANSSON_LIBS="-ljansson"],
+    [],
+    [$JANSSON_LDFLAGS])
+AC_CHECK_LIB(
+    [copenapi],
+    [coapi_load_from_file],
+    [COPENAPI_LIBS="-lcopenapi"]
+    [],
+    [$COPENAPI_LDFLAGS])
+AC_CHECK_LIB(
+    [restengine],
+    [VmRESTInit],
+    [CRESTENGINE_LIBS="-lrestengine"],
+    [],
+    [$CRESTENGINE_LDFLAGS])
+AC_CHECK_LIB(
+    [ssooidc],
+    [OidcAccessTokenBuild],
+    [OIDC_LIBS="-lssocommon -lssooidc"],
+    [],
+    [$OIDC_LDFLAGS])
 
 
 AC_SUBST(BOOST_LIBS)
