--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -2,6 +2,11 @@
 noinst_LTLIBRARIES = librest-head.la
 
 librest_head_la_SOURCES = \
+    libmain.c
+
+if REST_ENABLED
+
+librest_head_la_SOURCES += \
     accesstoken.c \
     auth.c \
     decode.c \
@@ -10,12 +15,13 @@ librest_head_la_SOURCES = \
     httperror.c \
     ldapapi.c \
     ldapcontrol.c \
-    libmain.c \
     objectapi.c \
     operation.c \
     param.c \
     resource.c \
     result.c
+
+endif
 
 librest_head_la_CPPFLAGS = \
     -I$(top_srcdir)/include \
@@ -29,7 +35,6 @@ librest_head_la_CPPFLAGS = \
     @JANSSON_INCLUDES@ \
     @COPENAPI_INCLUDES@ \
     @CRESTENGINE_INCLUDES@ \
-    @SSOCOMMON_INCLUDES@ \
     @OIDC_INCLUDES@
 
 librest_head_la_LDFLAGS = \
