lwraft: enable OIDC token validation (PR 1881831)
Change-Id: Ib5eafa8cc65a21298cc475ace2ab1c0e478b1b30

--- a/lwraft/server/common/Makefile.am
+++ b/lwraft/server/common/Makefile.am
@@ -10,15 +10,16 @@
 noinst_LTLIBRARIES = libsrvcommon.la
 
 libsrvcommon_la_SOURCES = \
-    candidates.c          \
-    entryencodedecode.c   \
-    krbsrvutil.c          \
-    oprequestutil.c       \
-    security-sd.c         \
-    srp.c                 \
-    util.c                \
-    vmdirentry.c          \
-    urgentrepl.c          \
+    candidates.c \
+    entryencodedecode.c \
+    krbsrvutil.c \
+    oprequestutil.c \
+    security-sd.c \
+    srp.c \
+    util.c \
+    vmdirentry.c \
+    urgentrepl.c \
+    vmafdlib.c \
     vmdirtoldaperror.c
 
 libsrvcommon_la_CPPFLAGS = \
