fix top-level photon OS build
This change fixes the top-level photon OS build.  The directory
vmidentity/ssoclients is now built prior to lwraft and vmdir projects
to satisfy library dependencies when REST is enabled.

Change-Id: I3214901cc1e20596cd539de775ad89f3bf96c58b

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ include $(MAKEROOT)/makedefs.mk
 
 SUBDIRS = \
         vmevent \
+        vmidentity/ssoclients \
         lwraft \
         vmdir \
         vmdns \
