PR 1861676: lwraft-cli node list/state/promote/demote
root@lw-t3 [ /home/admin/workspaces/LW-5 ]# /opt/vmware/bin/lwraft-cli help
Usage: lwraft-cli { arguments }

Arguments:

	node list    --server-name      <host name>

	node state   --server-name      <host name>
	             --login            <user@domain>
	             --password         <password>

	node promote --password         <password>
	            [--host-name        <host name> preferred Lightwave Raft host name, can be FQDN or IP]
	            [--domain-name      <domain name> | --partner-name    <host of partner> ]

	node demote  --server-name      <host name>
	             --login            <user@domain>
	             --password         <password>
	             --demote-host-name <host to demote>]

	help

* Promote can specify any node in the cluster as partner. It will find the leader and does the join eventually.
* also, retire lwraftleavefed.
* will retire lwraftpromo later after.

* address comments from Kyoung

Change-Id: I9d0b62e24811b40946251da2a3204ab5fa972ac1

--- a/lwraft/client/Makefile.am
+++ b/lwraft/client/Makefile.am
@@ -17,6 +17,7 @@ liblwraftclient_la_SOURCES = \
     krb5login.c \
     ldaputil.c \
     libmain.c \
+    raftclient.c \
     registry.c \
     repadmin.c \
     replication.c \
