--- a/lwraft/server/Makefile.am
+++ b/lwraft/server/Makefile.am
@@ -7,11 +7,7 @@
 #         Sriram Nambakam (snambakam@vmware.com)
 #
 
-STOREDIRS =
-
-if HAVE_MDB_STORE
-    STOREDIRS += mdb-store
-endif
+STOREDIRS = mdb-store
 
 SUBDIRS = \
     kdcsrvcommon \
