Reverse DNS impl for ipv4 and ipv6 with test
Change-Id: Ibc983c33df4b1b23e2f0e2a3db34d0fa1303b164

--- a/vmdns/test/Makefile.am
+++ b/vmdns/test/Makefile.am
@@ -10,7 +10,8 @@ dnstest_SOURCES =       \
     LruListTest.c       \
     test-nameentry.c    \
     test-recordlist.c   \
-    TestUtils.c
+    TestUtils.c         \
+    TestPtr.c
 
 dnstest_CPPFLAGS = \
     -I$(top_srcdir)/include \
