lwraft: porting ACL manager CLI tool from vmdir
Change-Id: I66332ec1db7c254c4ece565e9ac29bd6ba58927e

--- a/lwraft/tools/vdcaclmgr/Makefile.am
+++ b/lwraft/tools/vdcaclmgr/Makefile.am
@@ -1,12 +1,11 @@
-bin_PROGRAMS = vdcaclmgr
+bin_PROGRAMS = lwraftaclmgr
 
-vdcaclmgr_SOURCES = \
+lwraftaclmgr_SOURCES = \
     acl.c           \
     ldap.c          \
-    stringlist.c    \
     main.c
 
-vdcaclmgr_CPPFLAGS = \
+lwraftaclmgr_CPPFLAGS = \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
     -I$(top_srcdir)/tools/include \
@@ -15,21 +14,24 @@ vdcaclmgr_CPPFLAGS = \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
-vdcaclmgr_LDADD = \
+lwraftaclmgr_LDADD = \
     $(top_builddir)/client/liblwraftclient.la \
     $(top_builddir)/common/libcommon.la \
+    @DCERPC_LIBS@ \
     @LWIO_LIBS@ \
+    @LWRSUTILS_LIBS@ \
     @SCHANNEL_LIBS@ \
     @LWMSG_LIBS@ \
-    @LWRSUTILS_LIBS@ \
     @LWREG_LIBS@ \
     @LWBASE_LIBS@ \
     @CRYPTO_LIBS@ \
     @CRYPT_LIBS@ \
-    @UUID_LIBS@ \
     @GSSAPI_LIBS@ \
-    @LDAP_LIBS@
+    @LDAP_LIBS@ \
+    @PTHREAD_LIBS@ \
+    @UUID_LIBS@ \
+    @LBER_LIBS@
 
-vdcaclmgr_LDFLAGS = \
+lwraftaclmgr_LDFLAGS = \
     @OPENSSL_LDFLAGS@ \
     @LW_LDFLAGS@
