DDNS Client This change is to add the DDNS client feature to VMAFD. With this change, clients and servers joined to a domain can automagically have their DNS records in the VMDNS updated.
Change-Id: Ifd1573411ff2a0eef0f96dc6878638fe4db0b3ad

--- a/vmafd/server/vmafd/Makefile.am
+++ b/vmafd/server/vmafd/Makefile.am
@@ -15,7 +15,6 @@ vmafdd_SOURCES = \
     cdcupdate.c \
     dcfinder.c    \
     ddns.c	\
-    ddnspackets.c \
     dns.c         \
     globals.c     \
     heartbeat.c     \
@@ -64,6 +63,7 @@ vmafdd_LDADD = \
     $(top_builddir)/client/libvmafdclient.la \
     $(top_builddir)/vmevent/server/libvmeventserver.la \
     $(top_builddir)/common/libcommon.la \
+    $(top_builddir)/vmnetevent/libvmnetevent.la \
     @VMDIR_LIBS@ \
     @VMDNS_LIBS@ \
     @DCERPC_LIBS@ \
