lwraft: authorize lightwave users (PR 1861840)
Change-Id: Idf76b91be3f1652ddace2e47145255d86a9dbd78

--- a/lwraft/server/rest-head/Makefile.am
+++ b/lwraft/server/rest-head/Makefile.am
@@ -7,8 +7,8 @@ librest_head_la_SOURCES = \
 if REST_ENABLED
 
 librest_head_la_SOURCES += \
-    accesstoken.c \
     auth.c \
+    authtoken.c \
     decode.c \
     encode.c \
     globals.c \
