Add new REST api for metrics
This change adds a new REST api to query metrics data in json
format.  Initially it returns the existing LDAP operation
statistics. This will be further enhanced to provide many
other types of metrics data.  Also made a few changes to
fix build failures when compiling with the -g debug flag.

Change-Id: I12c3155440bf474b33f907dff4f225906257bdc0

--- a/vmdir/server/rest-head/Makefile.am
+++ b/vmdir/server/rest-head/Makefile.am
@@ -14,6 +14,7 @@ librest_head_la_SOURCES += \
     globals.c \
     httperror.c \
     ldapapi.c \
+    metricsapi.c \
     operation.c \
     param.c \
     resource.c \
