Solved missing MS-PAC from returned service tickets
Mostly #ifdef tag changes to include authz data required to construct
the MS-PAC data. A couple of git merge mistakes were also uncovered.
This solves the issue of SMB2 Tree Connect failing during Windows Join.
This now works.

Change-Id: Ibd48d3705ce1cc1de8ebebf3f7d5997a3c71d228

--- a/vmdir/server/kdckrb5/Makefile.am
+++ b/vmdir/server/kdckrb5/Makefile.am
@@ -4,6 +4,9 @@ PACSOURCES =
 if VMDIR_ENABLE_PAC
 PACSOURCES += authzdata.c
 endif
+if MSPAC_SUPPORT
+PACSOURCES += authzdata.c
+endif
 
 libvmkrb5_la_SOURCES = \
     authenticator.c    \
