Split configure-lightwave-server to native and STS firstboot scripts
Change-Id: I3a2a167c97e4d704b34c174640570b21719ee6f1

--- a/config/configure.ac
+++ b/config/configure.ac
@@ -481,6 +481,7 @@ AC_CONFIG_FILES([Makefile
                  scripts/Makefile
                  scripts/configure-lightwave-server
                  scripts/configure-identity-server
+                 scripts/configure-sts
                 ])
 AC_OUTPUT
 
