--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -5,7 +5,7 @@ INSTANCE_NAME=vmware-sts
 VMWARE_INSTANCE=$VMWARE_HOME/$INSTANCE_NAME
 VMWARE_STS_CONFIG=$VMWARE_HOME/config
 
-JAVA_HOME=${JAVA_HOME:-@JAVA_HOME@}
+JAVA_HOME=/etc/alternatives/jre
 JSVC_HOME=${JSVC_HOME:-@COMMONS_DAEMON_HOME@}
 JSVC_BIN=@JSVC@
 DEFAULT_MAX_RAM=256m
@@ -62,7 +62,7 @@ StartService()
             $JAVA_OPTS \
             $CATALINA_OPTS \
             -Djava.endorsed.dirs="$CATALINA_HOME/endorsed" \
-            -classpath "$CATALINA_HOME/lib/*:$CATALINA_HOME/bin/bootstrap.jar:$CATALINA_HOME/bin/tomcat-juli.jar:$CATALINA_BASE/bin/vmware-identity-tomcat-extensions.jar" \
+            -classpath "$JSVC_HOME/*:$CATALINA_HOME/lib/*:$CATALINA_HOME/bin/bootstrap.jar:$CATALINA_HOME/bin/tomcat-juli.jar:$CATALINA_BASE/bin/vmware-identity-tomcat-extensions.jar" \
             -Dcatalina.base=$CATALINA_BASE \
             -Dcatalina.home=$CATALINA_HOME \
             -Dvmware.log.dir=$STSD_LOG_DIR \
@@ -73,10 +73,10 @@ StartService()
     rc=$?
     if [ $rc -ne 0 ]; then
         echo "Failed to start STS service. Error code : $rc"
-    else 
+    else
 	echo "STS(Secure Token service) started successfully!"
     fi
-      
+
     return $rc
 }
 
