vmdir: introduce SID with domain template so we can build defaultSecurityDescriptor that can be applied per domain (PR 1861840, 1905019)
- Generate SID with domain template when building defaultSecurityDesciptor
- Replace the template with authenticated domain SID when creating object SD from defaultSecurityDescriptor
- New defaultSecurityDescriptors for computer, group, and vmwcertificationauthority classes that grant read permission to all authenticated users

Change-Id: Ic8a2d953b5aac7bc9cfb03bcd396c3412852f3f3

--- a/vmdir/testing/integration_tests/acls/Makefile.am
+++ b/vmdir/testing/integration_tests/acls/Makefile.am
@@ -11,6 +11,8 @@ libsecuritydescriptortests_la_SOURCES = \
     administratorrights.c \
     administratorsrights.c \
     bad_parameters.c \
+    custom_groups.c \
+    default_security_descriptor.c \
     domainadminsrights.c \
     domainclientsrights.c \
     inheritance.c \
