Rest Head for VMDNS for collecting metrics
Why this change is needed:
   Rest end point to collect metrics from vmdns to send it to the wavefront.
Changes made :
 - Added rest-head library and statically linked to vmdnsd.
 - Rest head specification includes only the GET method without the support for parameters.
 - Added opstatic.c inside vmdns/server/common/ to get/update the counter values
   for the vmdns metrics.
 - The following metrics have been addressed
   -dns_query_count
   -forwarder_query_count
Comments :
 - Rest end point uses port 7677

Change-Id: I556a7630f627868900970f9eb89ae715839e9fb4

--- a/vmdns/config/vmdns.reg.in
+++ b/vmdns/config/vmdns.reg.in
@@ -35,3 +35,8 @@
     value   = dword:00000001
     doc = "Set to '1' to allow DNS Protocol Listener"
 }
+"RestListenPort" = {
+    default = "7677p"
+    value   = "7677p"
+    doc = "Set 7677 as Rest Listener Port"
+}
