--- a/vmdns/config/Makefile.am
+++ b/vmdns/config/Makefile.am
@@ -1,4 +1,5 @@
 vmdnsconf_DATA = \
     vmdns.reg    \
     vmdns-client.reg \
-    vmdnsd-syslog-ng.conf
+    vmdnsd-syslog-ng.conf \
+    vmdns-rest.json
